<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- EditText Container -->
    <LinearLayout
        android:id="@+id/editTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="16dp"
        tools:ignore="NotSibling">
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_name" />
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/editTextMarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_marks" />
        <EditText
            android:id="@+id/editTextInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_interest" />
        <EditText
            android:id="@+id/editTextHometown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_hometown"
            android:autofillHints="" />

    </LinearLayout>
    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true">
        <!-- Button for Subject -->
        <Button
            android:id="@+id/btnbranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_for_branch"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>
        <!-- Button for Gender -->
        <Button
            android:id="@+id/btnclub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_press_for_club"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</RelativeLayout>